# prior-auth-copilot

./: .env.example  .gitignore  LEADERSHIP.md  LICENSE  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh  stop.sh
data/policies/: cms-ncd-220.6.17-mri-spine.md
data/synthea-config/: manifest.json  seeds.txt  synthea.properties
docker/hapi/: README.md  application.yaml  fetch_igs.ps1  fetch_igs.sh
docker/payer-hapi/: application.yaml
docker/synthea/: Dockerfile
docs/: WORKFLOW.md  mcp-tools.md
docs/adr/: 0001-langgraph-over-crewai-autogen.md  0002-fhir-server-choice.md  0003-langgraph-state-shape.md  0004-embedding-model.md  0005-vector-store.md  0006-reasoner-llm.md  0007-reviewer-ui.md  0008-checkpoint-persistence.md  0009-mock-payer-server.md  README.md
docs/evals/: 4.2-scorecard.md  4.3-scorecard.md  4.4-scorecard.md  v1.0-scorecard.md
docs/personas/: README.md  ordering-provider.md  payer-reviewer.md  um-nurse.md
docs/phases/: 4.1-problem-framing.md  4.2-evidence-retrieval.md  4.3-medical-necessity-reasoner.md  4.4-pas-bundle-reviewer.md  4.5-evals-release.md  README.md
docs/runbook/: operations.md
evals/: __init__.py
evals/datasets/: 4.2-evidence-v1.jsonl  4.3-reasoner-v1.jsonl  4.4-bundle-v1.jsonl
evals/metrics/: __init__.py  evidence_metrics.py
evals/results/: .gitkeep
evals/runners/: __init__.py  run_4_2.py  (+3 more)
scripts/: demo_e2e.py  demo_evidence.py  demo_reason.py  ingest_policies.py  load_synthea.py  mock_payer.py  smoke_fhir.py  smoke_mcp_tools.py
tests/: test_checklist_tagger.py
(+19 files in other folders)
