[project]
name = "prior-auth-copilot"
version = "0.1.0"
description = "Agentic FHIR-native Prior Authorization co-pilot"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "mcp-fhir>=1.0.0",
    "httpx>=0.27.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.0",
    "langsmith>=0.1.0",
    "pydantic>=2.7.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
